--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "haversine": "^1.1.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-maps": "^0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
