--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data android:name="com.google.android.geo.API_KEY" 
+          android:value="AIzaSyARRqg-uBKLYXx1ftOb8mTnR3xpphbO9mU"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
