--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'rNotification' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   target 'rNotificationTests' do
     inherit! :complete
     # Pods for testing
