--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "haversine": "^1.1.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-maps": "^0.27.1"
+    "react-native-maps": "^0.27.1",
+    "react-native-maps-directions": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
